k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wemeetatplace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: wemeetatplace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wemeetatplace-server
                port:
                  number: 80
